--- a/webui/package.json
+++ b/webui/package.json
@@ -17,8 +17,10 @@
     "@mui/material": "^5.13.2",
     "@mui/x-date-pickers": "^6.5.0",
     "base64url": "^3.0.1",
+    "curve25519-js": "^0.0.4",
     "date-fns": "^2.30.0",
     "fast-equals": "^5.0.1",
+    "js-sha256": "^0.9.0",
     "marked": "^5.0.3",
     "notistack": "~2.0.8",
     "query-string": "^8.1.0",
