Run as service on Windows and further stability enhancements
* New method of running as service on Windows installations.
* Fixed issue with eventual consistency when doing optimizing logs.
* Removed a few annoying warnings when not running as admin.
* Fixed a recently introduced potential data corruption bug when updating keys.
* Support Windows installations that have non standard AppData directory locations.

--- a/scripts/underscorebackup.service
+++ b/scripts/underscorebackup.service
@@ -8,7 +8,7 @@ WorkingDirectory=/tmp
 StandardOutput=null
 StandardError=syslog
 SyslogIdentifier=underscorebackup
-ExecStart=/opt/underscorebackup/bin/underscorebackup $UNDERSCOREBACKUP_OPTS interactive
+ExecStart=/opt/underscorebackup/bin/underscorebackup $UNDERSCOREBACKUP_OPTS interactive service
 SuccessExitStatus=0
 TimeoutStopSec=60
 Restart=on-failure
