Security and stability improvements
* Encrypt all API traffic.
* Switched UI authentication to use a backup password instead of separate credentials.
* Fixed continuous backups on non-Windows platforms.
* Added UI application to Linux packages.
* Fixed deadlock in manifest manager shutdown.
* Don't show "Stop Schedule" button when there is no schedule.
* Fixed service location for non Windows platforms.

--- a/linux/control
+++ b/linux/control
@@ -3,4 +3,4 @@ Version: VERSION-1
 Architecture: amd64
 Maintainer: Underscore Research <support@underscoreresearch.com>
 Description: Serverless backup solution with client side encryption.
-Depends: libc6
+Depends: libc6, fswatch (>= 1.0.0)
