--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '2.2.1.6'
+version '2.3.0.0'
 def releaseType = 'rc'
 
 def archiveName = 'underscorebackup'
@@ -164,6 +164,7 @@ dependencies {
             'com.google.inject:guice:7.0.0',
             'com.hierynomus:smbj:0.12.1',
             'com.joestelmach:natty:0.13',
+            'io.methvin:directory-watcher:0.18.0',
             'commons-cli:commons-cli:1.5.0',
             'commons-codec:commons-codec:1.16.0',
             'de.mkammerer:argon2-jvm:2.11',
