--- a/webui/package.json
+++ b/webui/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": false,
   "scripts": {
-    "start": "parcel serve ./src/index.html -p 3000",
+    "start": "grunt copyargon2 && parcel serve ./src/index.html -p 3000",
     "build": "grunt",
     "clean": "grunt clean"
   },
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.13.2",
     "@mui/x-date-pickers": "^6.5.0",
+    "aes-js": "^3.1.2",
+    "argon2-browser": "^1.18.0",
     "base64url": "^3.0.1",
     "curve25519-js": "^0.0.4",
     "date-fns": "^2.30.0",
@@ -36,9 +38,11 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@parcel/packager-raw-url": "^2.9.1",
-    "@parcel/transformer-webmanifest": "^2.9.1",
-    "@parcel/validator-typescript": "^2.9.1",
+    "@parcel/packager-raw-url": "^2.9.3",
+    "@parcel/transformer-webmanifest": "^2.9.3",
+    "@parcel/validator-typescript": "^2.9.3",
+    "@types/aes-js": "^3.1.1",
+    "@types/argon2-browser": "^1.18.1",
     "@types/marked": "^5.0.0",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
@@ -46,12 +50,14 @@
     "@types/react-window": "^1.8.5",
     "@types/zxcvbn": "^4.4.1",
     "crypto-browserify": "^3.12.0",
-    "cypress": "12.9.0",
+    "cypress": "^13.1.0",
     "events": "^3.3.0",
     "grunt": "^1.6.1",
     "grunt-contrib-clean": "^2.0.1",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-exec": "^3.0.0",
     "parcel": "^2.9.1",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "string_decoder": "^1.3.0"
