--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '2.3.0.7'
-def releaseType = 'rc'
+version '2.3.0.8'
+def releaseType = ''
 
 def archiveName = 'underscorebackup'
 def edition = ''
