* Support automatic upgrades (Enabled by default) for all supported platforms   except Windows application install (Service is supported on Windows too). * Keep config URL in same place between runs. * Only remove stale temp files if unmodified for an hour. * Tweaked how internet connectivity is detected.

--- a/linux/underscorebackup.service
+++ b/linux/underscorebackup.service
@@ -6,7 +6,7 @@ EnvironmentFile=-/etc/default/underscorebackup
 User=root
 WorkingDirectory=/tmp
 StandardOutput=null
-StandardError=syslog
+StandardError=null
 SyslogIdentifier=underscorebackup
 ExecStart=/opt/underscorebackup/bin/underscorebackup $UNDERSCOREBACKUP_OPTS interactive service
 SuccessExitStatus=0
