--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '2.3.1.1'
-def releaseType = 'pre'
+version '2.3.1.2'
+def releaseType = 'rc'
 
 def archiveName = 'underscorebackup'
 def edition = ''
