--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -33,10 +33,10 @@ jobs:
 
       - uses: actions/checkout@v4.0.0
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v3.12.0
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'corretto'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           settings-path: ${{ github.workspace }} # location for the settings.xml file
@@ -83,7 +83,7 @@ jobs:
           WINDOWS_CERT_DATA: ${{ secrets.WINDOWS_CODE_SIGN }}
           WINDOWS_CERT_PASSWORD: ${{ secrets.WINDOWS_SIGN_PASSWORD }}
         with:
-          arguments: allDistTest
+          arguments: downloadJavaAllDistTest
 
       - name: Apply code signature to Windows installer
         if: contains(matrix.os, 'windows')
