--- a/osx/Underscore Backup.app/Contents/Info.plist
+++ b/osx/Underscore Backup.app/Contents/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.2.1</string>
+	<string>2.3.0</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
@@ -41,9 +41,9 @@
 	<key>DTSDKName</key>
 	<string>macosx14.0</string>
 	<key>DTXcode</key>
-	<string>1500</string>
+	<string>1501</string>
 	<key>DTXcodeBuild</key>
-	<string>15A240d</string>
+	<string>15A507</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>12.3</string>
 	<key>NSMainNibFile</key>
