--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '2.4.1.0'
-def releaseType = 'pre'
+version '2.4.1.1'
+def releaseType = ''
 
 def archiveName = 'underscorebackup'
 def edition = ''
