--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '2.4.1.2'
-def releaseType = ''
+version '2.4.2.0'
+def releaseType = 'rc'
 
 def archiveName = 'underscorebackup'
 def edition = ''
