--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '3.0.0.0'
-def releaseType = 'pre'
+version '3.0.0.1'
+def releaseType = 'rc'
 
 def archiveName = 'underscorebackup'
 def edition = ''
