--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -22,6 +22,7 @@ jobs:
           - windows-x64
           - ubuntu-latest
           - macos-arm
+    permissions: write-all
     runs-on: ${{ matrix.os }}
 
     steps:
