--- a/webui/package.json
+++ b/webui/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "grunt copyargon2 && parcel serve ./src/index.html -p 3000",
     "build": "grunt",
-    "upgrade": "npm-check-updates",
+    "upgrade": "npm-check-updates -u && npm install",
     "clean": "grunt clean"
   },
   "dependencies": {
@@ -26,7 +26,6 @@
     "js-sha3": "^0.9.3",
     "marked": "^12.0.2",
     "notistack": "~3.0.1",
-    "npm-check-updates": "^16.14.20",
     "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -58,6 +57,7 @@
     "grunt-contrib-clean": "^2.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-exec": "^3.0.0",
+    "npm-check-updates": "^16.14.20",
     "parcel": "^2.12.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
