--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '3.0.2.0'
+version '3.0.2.1'
 def releaseType = 'rc'
 
 def archiveName = 'underscorebackup'
@@ -292,6 +292,8 @@ task downloadJavaAllDistTest(type: Exec) {
         commandLine "perl", "scripts/freshjavabuild.pl", "https://corretto.aws/downloads/latest/amazon-corretto-21-x64-windows-jdk.zip"
     } else if (Os.isFamily(Os.FAMILY_MAC)) {
         commandLine "perl", "scripts/freshjavabuild.pl", "https://corretto.aws/downloads/latest/amazon-corretto-21-aarch64-macos-jdk.tar.gz", "Contents/Home"
+    } else if (System.getProperty("os.arch") == "aarch64") {
+        commandLine "perl", "scripts/freshjavabuild.pl", "https://corretto.aws/downloads/latest/amazon-corretto-21-aarch64-linux-jdk.tar.gz"
     } else {
         commandLine "perl", "scripts/freshjavabuild.pl", "https://corretto.aws/downloads/latest/amazon-corretto-21-x64-linux-jdk.tar.gz"
     }
