--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '3.0.2.5'
-def releaseType = 'rc'
+version '3.0.2.6'
+def releaseType = ''
 
 def archiveName = 'underscorebackup'
 def edition = ''
