--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'application'
     id 'distribution'
     id 'org.beryx.runtime' version '1.13.1'
-    id 'com.github.ben-manes.versions' version '0.49.0'
+    id 'com.github.ben-manes.versions' version '0.51.0'
 }
 
 application {
@@ -19,8 +19,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '3.0.3.12'
-def releaseType = ''
+version '3.0.4.0'
+def releaseType = 'rc'
 
 def archiveName = 'underscorebackup'
 def edition = ''
@@ -162,51 +162,51 @@ dependencies {
     implementation(
             'com.cronutils:cron-utils:9.2.1',
             'com.dropbox.core:dropbox-core-sdk:7.0.0',
-            'com.fasterxml.jackson.core:jackson-databind:2.17.1',
-            'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.1',
-            'com.google.guava:guava:33.2.0-jre',
+            'com.fasterxml.jackson.core:jackson-databind:2.18.1',
+            'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.1',
+            'com.google.guava:guava:33.3.1-jre',
             'com.google.inject:guice:7.0.0',
             'com.hierynomus:smbj:0.13.0',
             'com.joestelmach:natty:0.13',
-            'commons-cli:commons-cli:1.8.0',
-            'commons-codec:commons-codec:1.17.0',
-            'commons-net:commons-net:3.10.0',
+            'commons-cli:commons-cli:1.9.0',
+            'commons-codec:commons-codec:1.17.1',
+            'commons-net:commons-net:3.11.1',
             'de.mkammerer:argon2-jvm:2.11',
             'io.swagger:swagger-annotations:1.6.14',
-            'jakarta.annotation:jakarta.annotation-api:2.1.1',
+            'jakarta.annotation:jakarta.annotation-api:3.0.0',
             'javax.xml.bind:jaxb-api:2.3.1',
             'net.java.dev.jna:jna:5.15.0',
-            'org.apache.commons:commons-lang3:3.14.0',
+            'org.apache.commons:commons-lang3:3.17.0',
             'org.apache.logging.log4j:log4j-api:2.23.1',
             'org.apache.logging.log4j:log4j-core:2.23.1',
             'org.apache.logging.log4j:log4j-slf4j2-impl:2.23.1',
-            'org.bouncycastle:bcprov-jdk18on:1.78.1',
+            'org.bouncycastle:bcprov-jdk18on:1.79',
             'org.mapdb:mapdb:3.1.0',
             'org.openapitools:jackson-databind-nullable:0.2.6',
-            'org.projectlombok:lombok:1.18.30',
+            'org.projectlombok:lombok:1.18.34',
             'org.reflections:reflections:0.10.2',
             'org.slf4j:slf4j-api:2.0.13',
-            'org.takes:takes:1.24.4',
-            'software.amazon.awssdk:s3control:2.25.63',
+            'org.takes:takes:1.24.6',
+            'software.amazon.awssdk:s3control:2.29.3',
     )
 
     implementation('commons-logging:commons-logging') {
         version {
-            strictly '1.2'
+            strictly '1.3.4'
         }
     }
 
     testImplementation(
-            'org.hamcrest:hamcrest:2.2',
-            'org.junit.jupiter:junit-jupiter:5.10.2',
-            'org.mockito:mockito-junit-jupiter:5.12.0'
+            'org.hamcrest:hamcrest:3.0',
+            'org.junit.jupiter:junit-jupiter:5.11.3',
+            'org.mockito:mockito-junit-jupiter:5.14.2'
     )
 
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
-    annotationProcessor 'org.projectlombok:lombok:1.18.32'
-    annotationProcessor 'org.apache.logging.log4j:log4j-core:2.21.1'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.apache.logging.log4j:log4j-core:2.23.1'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
 }
 
 test {
