--- a/osx/Underscore Backup.app/Contents/Info.plist
+++ b/osx/Underscore Backup.app/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>22G120</string>
+	<string>24B83</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -31,19 +31,19 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string></string>
+	<string>24B75</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>14.0</string>
+	<string>15.1</string>
 	<key>DTSDKBuild</key>
-	<string>23A334</string>
+	<string>24B75</string>
 	<key>DTSDKName</key>
-	<string>macosx14.0</string>
+	<string>macosx15.1</string>
 	<key>DTXcode</key>
-	<string>1501</string>
+	<string>1610</string>
 	<key>DTXcodeBuild</key>
-	<string>15A507</string>
+	<string>16B40</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>12.3</string>
 	<key>NSMainNibFile</key>
