--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '3.1.0.10'
-def releaseType = 'rc'
+version '3.1.0.11'
+def releaseType = ''
 
 def archiveName = 'underscorebackup'
 def edition = ''
