--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '3.1.2.3'
-def releaseType = ''
+version '3.1.3.0'
+def releaseType = 'rc'
 
 def archiveName = 'underscorebackup'
 def edition = ''
@@ -162,11 +162,11 @@ dependencies {
     implementation(
             'com.cronutils:cron-utils:9.2.1',
             'com.dropbox.core:dropbox-core-sdk:7.0.0',
-            'com.fasterxml.jackson.core:jackson-databind:2.18.1',
-            'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.1',
+            'com.fasterxml.jackson.core:jackson-databind:2.18.2',
+            'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.18.2',
             'com.google.guava:guava:33.3.1-jre',
             'com.google.inject:guice:7.0.0',
-            'com.hierynomus:smbj:0.13.0',
+            'com.hierynomus:smbj:0.14.0',
             'com.joestelmach:natty:0.13',
             'commons-cli:commons-cli:1.9.0',
             'commons-codec:commons-codec:1.17.1',
@@ -183,11 +183,11 @@ dependencies {
             'org.bouncycastle:bcprov-jdk18on:1.79',
             'org.mapdb:mapdb:3.1.0',
             'org.openapitools:jackson-databind-nullable:0.2.6',
-            'org.projectlombok:lombok:1.18.34',
+            'org.projectlombok:lombok:1.18.36',
             'org.reflections:reflections:0.10.2',
-            'org.slf4j:slf4j-api:2.0.13',
+            'org.slf4j:slf4j-api:2.0.16',
             'org.takes:takes:1.24.6',
-            'software.amazon.awssdk:s3control:2.29.3',
+            'software.amazon.awssdk:s3control:2.29.30',
     )
 
     implementation('commons-logging:commons-logging') {
@@ -204,9 +204,9 @@ dependencies {
 
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 
-    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.36'
     annotationProcessor 'org.apache.logging.log4j:log4j-core:2.23.1'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.34'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
 }
 
 test {
