--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '3.1.3.4'
-def releaseType = ''
+version '3.1.4.0'
+def releaseType = 'pre'
 
 def archiveName = 'underscorebackup'
 def edition = ''
