Minor durability and reliability enhancements
* Changed block organization for new blocks so that you can split pieces of Reed Solomon EC onto separate drives if you wanted to.
* Removed backfill-metadata operation.
* If refresh or validation does not finish do a block validation on next completed backup regardless of schedule setup.

--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '3.1.5.1'
-def releaseType = 'pre'
+version '3.1.5.2'
+def releaseType = 'rc'
 
 def archiveName = 'underscorebackup'
 def edition = ''
