--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -42,6 +42,11 @@ jobs:
         run: |
           if [ ! -z "$BOOTSTRAP_COMMAND" ] ; then sh -c "$BOOTSTRAP_COMMAND" ; fi
 
+      - name: Setup Node 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -74,10 +79,7 @@ jobs:
           xcrun notarytool store-credentials "$CERT_PASSWORD" --apple-id "support@underscoreresearch.com" --team-id $APPLE_TEAM_ID --password $APPLE_APP_PASSWORD
 
       - name: Building Web UI
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - run: |
+        run: |
           cd webui
           npm install
           npm run build
