Minor performance, reliability and UI tweaks
* Fixed so that only a single message for waiting for consistency is displayed when doing destination validation.
* Detect objects marked for deletion but not yet purged through service.
* Don't validate the full log when doing automated block validation.
* Slight tweak doing block validation and refresh to hold exclusive lock shorter.

--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '3.2.0.7'
-def releaseType = ''
+version '3.2.1.0'
+def releaseType = 'rc'
 
 def archiveName = 'underscorebackup'
 def edition = ''
