--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ application {
 }
 
 group 'com.underscoreresearch'
-version '3.2.1.3'
-def releaseType = ''
+version '3.2.2.0'
+def releaseType = 'rc'
 
 def archiveName = 'underscorebackup'
 def edition = ''
